# photovideosharing-application-fastapi

./: .env  pyproject.toml  test.db
app/: app.py  db.py
