[project]
name = "fast-api-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.5.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]
